--- a/account/pom.xml
+++ b/account/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
-            <version>2.2.4.RELEASE</version>
+            <version>2021.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>io.seata</groupId>
@@ -66,6 +66,5 @@
             <artifactId>seata-spring-boot-starter</artifactId>
             <version>1.4.2</version>
         </dependency>
-
     </dependencies>
 </project>
