--- a/order/src/main/resources/application.yaml
+++ b/order/src/main/resources/application.yaml
@@ -44,5 +44,11 @@ feign:
   hystrix:
     enabled: false
 seata:
-  service:
-    grouplist: "127.0.0.1:8091"
+  enabled: true
+  application-id: order
+  enable-auto-data-source-proxy: true
+  tx-service-group: seata_test_tx_group
+  config:
+    type: file
+    file:
+      name: file.conf
