--- a/account/pom.xml
+++ b/account/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
-            <version>2021.1</version>
+            <version>2.1.1.RELEASE</version>
             <exclusions>
                 <exclusion>
                     <groupId>io.seata</groupId>
